--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,25 @@
 <div class="container mt-5">
     <div class="card" style="padding: 20px;">
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
-            <input type="text"
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Username</mat-label>
+                <input matInput ngModel name="userName" id="userName" placeholder="Username">
+            
+                <mat-hint>Username</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Password</mat-label>
+                <input type="password" matInput ngModel name="userPassword" id="userPassword" placeholder="Password">
+            
+                <mat-hint>Password</mat-hint>
+            </mat-form-field>
+
+            <button type="submit" mat-raised-button color="primary" class="w-100">Login</button>
+
+
+            <!-- <input type="text"
             ngModel
             name="userName"
             id="userName"
@@ -17,7 +35,7 @@
 
             <input type="submit"
             value="Login"
-            class="btn btn-outline-primary form-control rounded-0">
+            class="btn btn-outline-primary form-control rounded-0"> -->
         </form>
     </div>
 </div>
