--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -34,7 +34,35 @@
 
             </div>
             <div class="col-6">
-                <input type="file" multiple value="select" #selectFile (change)="onFileSelected($event)">
+                <div>
+                    <div class="dropzone" appDrag (files)="fileDropped($event)">
+                        <div class="text-wrapper">
+                            <div class="centered">
+                                Drag and drop your file or 
+                                <a (click)="selectFile.click()" class="browse-button"> browse</a>  
+                                 a file
+                            </div>
+                            
+                        </div>   
+                    </div>
+
+
+
+                    <input type="file" style="display: none;" multiple value="select" #selectFile (change)="onFileSelected($event)">
+                </div>
+                <div class="mt-5">
+                    <div class="row">
+                        <mat-grid-list cols="4" rowHeight="1:1">
+                            <mat-grid-tile *ngFor="let file of product.productImages;let i=index">
+                                <div style="position: relative">
+                                    <span class="btn-remove-image" (click)="removeImages(i)">x</span>
+                                    <img [src]="file.url" width="100px" height="100px">
+                                </div>
+                            </mat-grid-tile>
+                        </mat-grid-list>
+                    </div>
+
+                </div>
             </div>
         </div>
 
