--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,21 @@
 <mat-toolbar color="primary">
-<span>
-  E-Commerce Application
-</span>
+  <span>
+    E-Commerce Application
+  </span>
 
-<span class="space-buttons"></span>
-<button *ngIf="! isLoggedIn()" routerLink="/login" mat-raised-button color="primary" >
-  Login
-</button>
+  <span class="space-buttons"></span>
+  <button *ngIf="! isLoggedIn()" routerLink="/login" mat-raised-button color="primary">
+    Login
+  </button>
 
-<button *ngIf=" isLoggedIn()" (click)="logOut()" mat-raised-button color="warn" >
-  Logout
-</button>
+  <button *ngIf=" isLoggedIn()" (click)="logOut()" mat-raised-button color="warn">
+    Logout
+  </button>
 </mat-toolbar>
 
 <mat-toolbar color="primary" *ngIf="isLoggedIn()">
   <button mat-raised-button color="primary" routerLink="/">Home</button>
   <button *ngIf="isAdmin()" mat-raised-button color="primary" routerLink="/addNewProduct">Add New Product</button>
+  <button *ngIf="isAdmin()" mat-raised-button color="primary" routerLink="/showProductDetails">Show Product Details</button>
 
 </mat-toolbar>
-
-
-
-
-
-
