--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -27,7 +27,8 @@
 
                     <div align="end">
                         <button mat-stroked-button color="primary" style="margin-right: 3px;">clear</button>
-                        <button type="submit" mat-stroked-button color="primary">Add Product</button>
+                        <button type="submit" *ngIf="isNewProduct" mat-stroked-button color="primary">Add Product</button>
+                        <button type="submit" *ngIf="!isNewProduct" mat-stroked-button color="primary">Update Product</button>
                     </div>
 
                 </form>
