--- a/src/app/show-product-images-dialog/show-product-images-dialog.component.html
+++ b/src/app/show-product-images-dialog/show-product-images-dialog.component.html
@@ -1,5 +1,7 @@
-<mat-grid-list cols="4" rowHeight="1:1" >
-    <mat-grid-tile *ngFor="let fileHandle of data.images">
-        <img [src]="fileHandle.url"  width="150px" height="150px">
-    </mat-grid-tile>
-</mat-grid-list>
+<div class="container mt-5">
+    <mat-grid-list cols="4" rowHeight="1:1" gutterSize="10px">
+        <mat-grid-tile *ngFor="let fileHandle of data.images">
+            <img [src]="fileHandle.url" width="150px" height="150px">
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
