--- a/src/app/buy-product/buy-product.component.html
+++ b/src/app/buy-product/buy-product.component.html
@@ -10,15 +10,18 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Full Address</mat-label>
-                        <input matInput placeholder="Full Address" [(ngModel)]="orderDetails.fullAddress" name="fullAddress">
+                        <input matInput placeholder="Full Address" [(ngModel)]="orderDetails.fullAddress"
+                            name="fullAddress">
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Contact Number</mat-label>
-                        <input matInput placeholder="Contact Number" [(ngModel)]="orderDetails.contactNumber" name="contactNumber">
+                        <input matInput placeholder="Contact Number" [(ngModel)]="orderDetails.contactNumber"
+                            name="contactNumber">
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Alternate Contact Number</mat-label>
-                        <input matInput placeholder="Alternate Contact Number" [(ngModel)]="orderDetails.alternateContactNumber" name="alternateContactNumber">
+                        <input matInput placeholder="Alternate Contact Number"
+                            [(ngModel)]="orderDetails.alternateContactNumber" name="alternateContactNumber">
                     </mat-form-field>
 
                     <div align="right">
@@ -29,6 +32,41 @@
                 </form>
             </div>
             <div class="col-6">
+                <table class="table">
+                    <thead class="thead">
+                        <tr>
+                            <th>Name</th>
+                            <th>Amount</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr *ngFor="let product of productDetails">
+                            <td>{{product.productName}}</td>
+                            <td>{{product.productDiscountedPrice}}</td>
+                            <td>
+                                <select #quantity class="form-select"
+                                    [ngModel]="getQuantityForProduct(product.productId)"
+                                    (change)="onQuantityChanged(quantity.value,product.productId)">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </td>
+                            <td>
+                                {{getCalculatedTotal(product.productId,product.productDiscountedPrice)}}
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Total</td>
+                            <td>{{getCalculatedGrandTotal()}}</td>
+                        </tr>
+                    </tbody>
+                </table>
 
             </div>
         </div>
