--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,14 +5,14 @@
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Username</mat-label>
                 <input matInput ngModel name="userName" id="userName" placeholder="Username">
-            
+
                 <mat-hint>Username</mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput ngModel name="userPassword" id="userPassword" placeholder="Password">
-            
+
                 <mat-hint>Password</mat-hint>
             </mat-form-field>
 
@@ -37,5 +37,12 @@
             value="Login"
             class="btn btn-outline-primary form-control rounded-0"> -->
         </form>
+
     </div>
+    <div class="text-center">
+        <br>
+        <button mat-raised-button type="button" (click)="registerUser()">Create an account</button>
+    </div>
+
+
 </div>
