--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,4 +1,6 @@
 <div class=" mt-5 p-3">
+    <div *ngIf="showTable">
+
     <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
 
@@ -51,4 +53,9 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+</div>
+    <div class="text-center mt-5" *ngIf="showLoadMoreProductButton">
+        <button type="button" mat-raised-button color="primary" (click)="loadMoreProduct()">Load more</button>
+    </div>
 </div>
