--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -25,6 +25,13 @@
             <td mat-cell *matCellDef="let element"> {{element.product.productDiscountedPrice}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="Action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let element"> 
+              <button mat-raised-button color="warn" (click)="delete(element.cartId)">Delete</button>
+            </td>
+          </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
